modules/protocol/http/test/nullbytes-ref.txt
debug http: selecting http dissector on flow
debug tcp-connection: opening connection 127.0.0.1:42071 -> 127.0.0.1:80
debug grammar: parse error at byte 120 for field 2 in request_line: token /[[:blank:]]+/ doesn't match
info alert: id = <>
	severity = low
	description = invalid http request_line
debug tcp-connection: dropping connection 127.0.0.1:42071 -> 127.0.0.1:80
debug tcp-connection: closing connection 127.0.0.1:42071 -> 127.0.0.1:80
